@@ -74,7 +74,13 @@ class Gem::Commands::QueryCommand < Gem::Command
       say "*** LOCAL GEMS ***"
       say
 
-      output_query_results Gem.source_index.search(name)
+      specs = Gem.source_index.search name
+
+      spec_tuples = specs.map do |spec|
+        [spec.name, spec.version, spec.original_name, spec]
+      end
+
+      output_query_results spec_tuples
     end
 
     if remote? then
@@ -85,9 +91,9 @@ class Gem::Commands::QueryCommand < Gem::Command
       all = options[:all]
 
       dep = Gem::Dependency.new name, Gem::Requirement.default
-      specs = Gem::SpecFetcher.fetcher.fetch(dep, all, false)
+      spec_tuples = Gem::SpecFetcher.fetcher.find_matching dep, all, false
 
-      output_query_results specs.map { |spec,| spec }
+      output_query_results spec_tuples
     end
   end
 
@@ -101,28 +107,30 @@ class Gem::Commands::QueryCommand < Gem::Command
     !Gem.source_index.search(dep).empty?
   end
 
-  def output_query_results(gemspecs)
+  def output_query_results(spec_tuples)
     output = []
-    gem_list_with_version = {}
+    versions = Hash.new { |h,name| h[name] = [] }
 
-    gemspecs.flatten.each do |gemspec|
-      gem_list_with_version[gemspec.name] ||= []
-      gem_list_with_version[gemspec.name] << gemspec
+    spec_tuples.each do |spec_tuple, source_uri|
+      versions[spec_tuple.first] << [spec_tuple, source_uri]
     end
 
-    gem_list_with_version = gem_list_with_version.sort_by do |name, spec|
+    versions = versions.sort_by do |(name,),|
       name.downcase
     end
 
-    gem_list_with_version.each do |gem_name, list_of_matching|
-      list_of_matching = list_of_matching.sort_by { |x| x.version.to_ints }.reverse
-      seen_versions = {}
+    versions.each do |gem_name, matching_tuples|
+      matching_tuples = matching_tuples.sort_by do |(name, version,),|
+        version.to_ints
+      end.reverse
 
-      list_of_matching.delete_if do |item|
-        if seen_versions[item.version] then
+      seen = {}
+
+      matching_tuples.delete_if do |(name, version,),|
+        if seen[version] then
           true
         else
-          seen_versions[item.version] = true
+          seen[version] = true
           false
         end
       end
@@ -130,12 +138,22 @@ class Gem::Commands::QueryCommand < Gem::Command
       entry = gem_name.dup
 
       if options[:versions] then
-        versions = list_of_matching.map { |s| s.version }.uniq
+        versions = matching_tuples.map { |(name, version,),| version }.uniq
         entry << " (#{versions.join ', '})"
       end
 
-      entry << "\n" << format_text(list_of_matching[0].summary, 68, 4) if
-        options[:details]
+      if options[:details] then
+        detail_tuple = matching_tuples.first
+
+        spec = if detail_tuple.first.length == 4 then
+                 detail_tuple.first.last
+               else
+                 uri = URI.parse detail_tuple.last
+                 Gem::SpecFetcher.fetcher.fetch_spec detail_tuple.first, uri
+               end
+
+        entry << "\n" << format_text(spec.summary, 68, 4)
+      end
       output << entry
     end
 
