@@ -82,31 +82,78 @@ class TestGemSpecFetcher < RubyGemTestCase
     assert_equal [[@pl1.full_name, @gem_repo]], spec_names
   end
 
+  def test_fetch_spec
+    spec_uri = "#{@gem_repo}/#{Gem::MARSHAL_SPEC_DIR}#{@a1.full_name}.gemspec"
+    @fetcher.data["#{spec_uri}.rz"] = util_zip(Marshal.dump(@a1))
+
+    spec = @sf.fetch_spec ['a', Gem::Version.new(1), 'ruby'], @uri
+    assert_equal @a1.full_name, spec.full_name
+
+    cache_dir = @sf.cache_dir URI.parse(spec_uri)
+
+    cache_file = File.join cache_dir, "#{@a1.full_name}.gemspec"
+
+    assert File.exist?(cache_file)
+  end
+
+  def test_fetch_spec_cached
+    spec_uri = "#{@gem_repo}/#{Gem::MARSHAL_SPEC_DIR}#{@a1.full_name}.gemspec"
+    @fetcher.data["#{spec_uri}.rz"] = nil
+
+    cache_dir = @sf.cache_dir URI.parse(spec_uri)
+    FileUtils.mkdir_p cache_dir
+
+    cache_file = File.join cache_dir, "#{@a1.full_name}.gemspec"
+
+    open cache_file, 'wb' do |io|
+      Marshal.dump @a1, io
+    end
+
+    spec = @sf.fetch_spec ['a', Gem::Version.new(1), 'ruby'], @uri
+    assert_equal @a1.full_name, spec.full_name
+  end
+
+  def test_fetch_spec_platform
+    @fetcher.data["#{@gem_repo}/#{Gem::MARSHAL_SPEC_DIR}#{@pl1.original_name}.gemspec.rz"] =
+      util_zip(Marshal.dump(@pl1))
+
+    spec = @sf.fetch_spec ['pl', Gem::Version.new(1), 'i386-linux'], @uri
+
+    assert_equal @pl1.full_name, spec.full_name
+  end
+
+  def test_fetch_spec_platform_ruby
+    @fetcher.data["#{@gem_repo}/#{Gem::MARSHAL_SPEC_DIR}#{@a1.full_name}.gemspec.rz"] =
+      util_zip(Marshal.dump(@a1))
+
+    spec = @sf.fetch_spec ['a', Gem::Version.new(1), nil], @uri
+    assert_equal @a1.full_name, spec.full_name
+
+    spec = @sf.fetch_spec ['a', Gem::Version.new(1), ''], @uri
+    assert_equal @a1.full_name, spec.full_name
+  end
+
   def test_find_matching_all
     dep = Gem::Dependency.new 'a', 1
     specs = @sf.find_matching dep, true
 
-    assert_equal [@uri], specs.keys
-
     expected = [
-      ['a', Gem::Version.new(1), Gem::Platform::RUBY],
-      ['a', Gem::Version.new(2), Gem::Platform::RUBY],
+      [['a', Gem::Version.new(1), Gem::Platform::RUBY], @gem_repo],
+      [['a', Gem::Version.new(2), Gem::Platform::RUBY], @gem_repo],
     ]
 
-    assert_equal expected, specs[@uri]
+    assert_equal expected, specs
   end
 
   def test_find_matching_latest
     dep = Gem::Dependency.new 'a', 1
     specs = @sf.find_matching dep
 
-    assert_equal [@uri], specs.keys
-
     expected = [
-      ['a', Gem::Version.new(2), Gem::Platform::RUBY],
+      [['a', Gem::Version.new(2), Gem::Platform::RUBY], @gem_repo],
     ]
 
-    assert_equal expected, specs[@uri]
+    assert_equal expected, specs
   end
 
   def test_find_matching_platform
@@ -115,22 +162,18 @@ class TestGemSpecFetcher < RubyGemTestCase
     dep = Gem::Dependency.new 'pl', 1
     specs = @sf.find_matching dep
 
-    assert_equal [@uri], specs.keys
-
     expected = [
-      ['pl', Gem::Version.new(1), 'i386-linux'],
+      [['pl', Gem::Version.new(1), 'i386-linux'], @gem_repo],
     ]
 
-    assert_equal expected, specs[@uri]
+    assert_equal expected, specs
 
     util_set_arch 'i386-freebsd6'
 
     dep = Gem::Dependency.new 'pl', 1
     specs = @sf.find_matching dep
 
-    assert_equal [@uri], specs.keys
-
-    assert_equal [], specs[@uri]
+    assert_equal [], specs
   end
 
   def test_find_all_platforms
@@ -139,13 +182,11 @@ class TestGemSpecFetcher < RubyGemTestCase
     dep = Gem::Dependency.new 'pl', 1
     specs = @sf.find_matching dep, false, false
 
-    assert_equal [@uri], specs.keys
-
     expected = [
-      ['pl', Gem::Version.new(1), 'i386-linux'],
+      [['pl', Gem::Version.new(1), 'i386-linux'], @gem_repo],
     ]
 
-    assert_equal expected, specs[@uri]
+    assert_equal expected, specs
   end
 
   def test_list_all
