@@ -1,7 +1,8 @@
 2008-05-27  Eric Hodel  <drbrain@segment7.net>
 
-	* lib/rubygems/spec_fetcher.rb:  Switch #fetch to be compatible with
-	Gem::SourceInfoCache#search_with_source.
+	* lib/rubygems/spec_fetcher.rb:  Switch #fetch, #find_matching to be
+	compatible with Gem::SourceInfoCache#search_with_source.  Add caching
+	for .gemspec files.
 	* lib/rubygems/dependency_installer.rb:  Switch to SpecFetcher.
 	* lib/rubygems/source_index.rb:  Switch #outdated to use SpecFetcher.
 	* lib/rubygems/commands/dependency_command.rb:  Switch to SpecFetcher.
@@ -9,6 +10,8 @@
 	* lib/rubygems/commands/query_command.rb:  Switch to SpecFetcher.
 	* lib/rubygems/commands/sources_command.rb:  Switch to SpecFetcher.
 	* lib/rubygems/commands/update_command.rb:  Switch to SpecFetcher.
+	* lib/rubygems/version.rb:  Handle comparisons with non-Gem::Version
+	objects.
 
 2008-05-13  Eric Hodel  <drbrain@segment7.net>
 
